--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -377,7 +377,7 @@ which is derived from
 with
 \begin{gather*}
     \nabla^2=\frac{\partial^2}{\partial x^2}+\frac{\partial^2}{\partial y^2}+\frac{\partial^2}{\partial z^2} \\
-    \widehat{p}_d = \frac{\hbar}{i}\frac{\partial}{\partial d}
+    \widehat{p}_d = -i\hbar\frac{\partial}{\partial d}
 \end{gather*}
 
 If $\widehat{V}$ is \textbf{time-independent} the stationary states are given by
