finished 3D SE and angular momentum

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -528,7 +528,7 @@ where $L_q^p (x)$ are the \textbf{associated Laguerre functions}, $n$ is the \te
 \end{equation*}
 where $m_e\simeq m$
 
-\ptitle{Final Solution}
+\ptitle{Combined Solution}
 
 Combining the radial and the angular solution we get
 \begin{equation*}
@@ -651,7 +651,7 @@ which increase or lower the eigenvalue of $\widehat{L}_z$ by $\hbar$. These oper
 
 \subsubsection{Eigenfunctions}
 
-As they are compatible (share eigenfunctions), we choose to find the eigenfunctions for $\widehat{L^2}$ and $\widehat{L_z}$
+As they are compatible (share eigenfunctions), we choose to find the eigenfunctions for $\widehat{L}^2$ and $\widehat{L}_z$
 \begin{align*}
     \widehat{L}^2 f_{\ell}^{m_l} & =\hbar^{2}\ell (\ell+1) f_{\ell}^{m_l} \\
     \widehat{L}_z f_{\ell}^{m_l} & =\hbar mf_{\ell}^{m_l}
