--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -39,6 +39,7 @@ Observation of an ensemble of identical systems:
 
 
 \subsection{Commutators}
+Evaluate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$ and not $(\widehat{A}\widehat{B} - \widehat{B}\widehat{A})f$.
 
 \noindent\begin{equation*}
     \left[\widehat{A},\widehat{B}\right] = \widehat{A}\widehat{B} - \widehat{B}\widehat{A} = -\left[\widehat{B},\widehat{A}\right]
@@ -65,8 +66,15 @@ Observation of an ensemble of identical systems:
     \left[f(\widehat{x}),\widehat{p}\right]      & = i \hbar\frac{df}{dx} &                                          &
 \end{align*}
 
-\textbf{Remark}: Evaluate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$ and not $(\widehat{A}\widehat{B} - \widehat{B}\widehat{A})f$.
 
+\ptitle{Angular Momentum Commutators}\label{ang_mom_comm}
+
+Same rules apply to spin $S$
+\noindent\begin{gather*}
+    \left[\widehat{L}_{x},\widehat{L}_{y}\right] =i\hbar \widehat{L}_{z}, \qquad \left[\widehat{L}_{y},\widehat{L}_{z}\right]  =i\hbar \widehat{L}_{x}, \qquad \left[\widehat{L}_{z},\widehat{L}_{x}\right]  =i\hbar \widehat{L}_{y}      \\
+    \left[\widehat{L}^{2},\widehat{L}_{x}\right] = \left[\widehat{L}^{2},\widehat{L}_{y}\right] = \left[\widehat{L}^{2},\widehat{L}_{z}\right] = 0\\
+    \left[\widehat{L}^2, \mathbf{L}\right]=0
+\end{gather*}
 
 \subsection{Dirac Notation}
 Assuming the functions $f,g$ are square integrable i.e.\ in $L_2$ (\textbf{Hilbert space}) $\mathcal{H}$.
