--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -788,6 +788,7 @@ Spin can be in a general state
 \end{equation*}
 where the probability of measuring a certain spin (assuming $\left|\lambda\right>$ \textbf{normalized}!) is given by $|a|^2$ for $\uparrow$ and $|b|^2$ for $\downarrow$ respectively.
 
+\newpar{}
 \ptitle{Spin Operators as Matrices}
 
 Setting the two eigenstates of the electron as basis vectors (the space having only 2 dimensions allows for vector notation!) of a \textbf{two-dimensional} vector space we get
@@ -828,6 +829,7 @@ Note that
     \item If they were diagonal in z-basis, $\widehat{S}_{x},\widehat{S}_{y},\widehat{S}_{z}$ would have the same eigenvectors (but is not the case as they are incompatible).
 \end{itemize}
 
+\newpar{}
 \ptitle{Ladder Operators for Spin}
 
 The ladder operators have the effect
