--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -1,3 +1,6 @@
+% TODO: check if new additions to appendix are in final summary
+% TODO: add power series / taylor series
+
 \section{Appendix}
 \subsection{Notation}
 The following notation is based on the book \textit{Introduction to Quantum Mechanics} by David J. Darrel
