added Approximate Methods

--- a/src/main.tex
+++ b/src/main.tex
@@ -26,6 +26,7 @@
     \input{sections/final_cheatsheet/fin_SE_3D.tex}
     \input{sections/final_cheatsheet/fin_Multiple_Particles.tex}
     \input{sections/final_cheatsheet/fin_Atoms_Solids.tex}
+    \input{sections/final_cheatsheet/fin_Approx.tex}
     \input{sections/final_cheatsheet/fin_Appendix.tex}
     
 \end{multicols*}
