--- a/src/sections/04_Atoms_Solids.tex
+++ b/src/sections/04_Atoms_Solids.tex
@@ -507,7 +507,7 @@ based on this solution of the SE, the distance between the discrete energy level
 \noindent\begin{equation*}
     \Delta E \leq 10^{-6} ~\mathrm{eV}
 \end{equation*}
-and therefore the states from continous \textit{electron bands}.
+and therefore the states from continuous \textit{electron bands}.
 
 
 \subsubsection{k-Space}
