--- a/src/sections/final_cheatsheet/fin_SE.tex
+++ b/src/sections/final_cheatsheet/fin_SE.tex
@@ -245,8 +245,8 @@ A wavepacket consisting of infinitely many waves has a different \textit{group v
           \end{itemize}
     \item match solutions at interfaces between regions using boundary conditions:
           \begin{itemize}
-              \item $\psi(x)$ continous and finite
-              \item $\frac{d\psi}{dx}$ continous
+              \item $\psi(x)$ continuous and finite
+              \item $\frac{d\psi}{dx}$ continuous
           \end{itemize}
 \end{enumerate}
 
