--- a/src/sections/04_Atoms_Solids.tex
+++ b/src/sections/04_Atoms_Solids.tex
@@ -125,6 +125,7 @@ or
 Remarks
 \begin{itemize}
     \item Indistinguishable means that there is no way to  tell the two particles apart
+    \item In practice, one can somewhat tell the particles apart mathematically if the distance between them is large i.e.\ their wave functions ``don't'' overlap. If the particles are closer together their states ``merge'' and become the (anti)symmetric overall wave function.
     \item $\psi_{+}$ stays exactly the same when swapping $\mathbf{r_1},\mathbf{r_2}$
     \item $\psi_{-}$ changes sign when swapping $\mathbf{r_1},\mathbf{r_2}$
     \item Implications of these two solutions are presented subsequently
