--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -118,6 +118,9 @@ It is important to calculate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$
     \left[\widehat{L}^2, \mathbf{L}\right]=0
 \end{gather*}
 
+\ptitle{Spin Commutators}
+For spin, the same commutator rules hold as for angular momentum.
+
 \subsection{Inner Product}\label{ssec:InnerProd}
 \ptitle{Properties}
 \noindent\begin{align*}
