--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -141,7 +141,7 @@ These determinant states of $Q$ are \textit{eigenfunctions} of $\hat{Q}$ and the
 
 \textbf{Remarks:}
 \begin{itemize}
-    \item If multiple eigenfunctions share their eigenvalue, they are called \textit{degenerated states}.
+    \item If multiple eigenfunctions share their eigenvalue, they are called \textit{degenerate states}.
     \item The TISE is an example for a determinant state\newline
           $\hat{Q}: \hat{H},\; q:E$.
 \end{itemize}
